[package]
name = "dungen"
version = "0.1.0"
edition = "2024"

[dependencies]
# command line argument parser
# clap = { ... }

# visualisations during development and simple
# vector/rectangle operations
raylib = { version = "5.5.1" }
raylib_imgui = { version = "1.0.1" }
imgui = { version = "0.12.0" }

# pseudorandom number generation
rand = { version = "0.9.2" }

# serialization/deserialization
# serde = { ... }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
